<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Graphs</string>
    <string name="blueetooth_unavailable">This device does not support bluetooth.</string>
    <string name="new_device_found">New device found</string>
    
    <string name="action_settings">Settings</string>
    <string name="setup_title">Probes Setup</string>
    <string name="setup_scan">Scan for probes >></string>
    <string name="setup_action_list">List of found devices:</string>
    <string name="setup_action_scanning">Refreshing &#8230;</string>
    <string name="setup_start_graph">Start Graph</string>
    
    <string name="graphs_title">Graphs</string>
    <string name="graphs_empty">No Probes Loaded</string>
    <string name="graphs_back">Back to Settings</string>
    <string name="graphs_remove">Close this graph</string>
    <string name="graphs_new_period">Update</string>
    <string name="graphs_show">Show graph</string>
    <string name="new_graph_added">New graph added</string>
    <string name="graph_removed">Graph removed</string>
    <string name="graphs_address">Address :</string>
    <string name="graphs_state">Status :</string>
    <string name="graphs_state_disconnected">disconnected</string>
    <string name="graphs_state_connected">connected</string>
    <string name="graphs_name">Probe Name :</string>
    <string name="graphs_period_text">New measurement period</string>
    
    <string name="title_activity_setup_fragment">SetupFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="device">new Device</string>
    <string name="device_add">sketch?</string>
    <string name="graph_show_button">&#xf080;  Show graph >></string>
    <string name="graph_update_button">Update &#xf00c;</string>
    <string name="back_button">&lt;&lt; BACK</string>
    <string name="refit_button">REFIT</string>
    <string name="hum_button">HUM</string>
    <string name="tem_button">TEMP</string>
    
    <string name="entypo_gears">&#xf085;</string>
    <string name="entypo_sketch">&#xf085;</string>
    <string name="entypo_okay">&#xf00c;</string>
    <string name="entypo_remove"> &#xf00d; </string>
    <string name="entypo_barchart">&#xf080;</string>
    
    <string-array name="periods">
        <item>10s\t\t\t</item>
        <item>30s\t\t\t</item>
        <item>1min\t\t\t</item>
    </string-array>
    
</resources>