<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingTop="3dp" 
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingBottom="9dp"
    android:background="@drawable/main_list_item_background">
    
    <TextView 
        android:id="@+id/graphs_probe_name_const"
        style="@style/graph_desc_item"
        android:text="@string/graphs_name"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/graphs_probe_name"/>
    
    <TextView 
        android:id="@+id/graphs_probe_name"
        style="@style/graph_desc_item_big"
        android:layout_toRightOf="@+id/graphs_probe_name_const"
        android:layout_alignParentTop="true"/>
    
    <TextView 
        android:id="@+id/graphs_probe_address_const"
        style="@style/graph_desc_item"
        android:text="@string/graphs_address"
        android:layout_below="@+id/graphs_probe_name"
        android:layout_alignBottom="@+id/graphs_probe_address"/>
        
    <TextView 
        android:id="@+id/graphs_probe_address"
        style="@style/graph_desc_item_big"
        android:layout_below="@+id/graphs_probe_name"
        android:layout_toRightOf="@+id/graphs_probe_name_const"/>
        
    <TextView 
        android:id="@+id/graphs_probe_state_const"
        style="@style/graph_desc_item"
        android:text="@string/graphs_state"
        android:layout_below="@+id/graphs_probe_address"
        android:layout_alignBottom="@+id/graphs_probe_state"/>
        
    <TextView 
        android:id="@+id/graphs_probe_state"
        style="@style/graph_desc_item_big"
        android:text="@string/graphs_state_disconnected"
        android:textColor="#ff2121"
        android:layout_below="@+id/graphs_probe_address"
        android:layout_toRightOf="@+id/graphs_probe_name_const"/>
        
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dropdown_background"
        android:layout_below="@+id/graphs_probe_state"
        android:id="@+id/graph_period_spinner"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dialog"
        android:prompt="@string/graphs_period_text"/>
    
    <com.jangonera.oscilloscope.customview.IconView
        android:id="@+id/graphs_update_button"
        style="@style/graph_navigation_button"
        android:text="@string/graph_update_button"
       	android:contentDescription="@string/graphs_new_period"
       	android:layout_alignParentRight="true"
       	android:layout_alignBottom="@+id/graph_period_spinner"
       	android:layout_toRightOf="@+id/graph_period_spinner"
        android:layout_below="@+id/graphs_probe_state"/>
    
   <com.jangonera.oscilloscope.customview.IconView
        android:id="@+id/graphs_close_graph"
        style="@style/graph_navigation_button"
        android:text="@string/entypo_remove"
        android:textColor="#ff2121"
       	android:contentDescription="@string/graphs_remove"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/graph_period_spinner"
		android:layout_alignBottom="@+id/graphs_show_graph"/>
   
	<com.jangonera.oscilloscope.customview.IconView
        android:id="@+id/graphs_show_graph"
        style="@style/graph_navigation_button"
        android:text="@string/graph_show_button"
       	android:contentDescription="@string/graphs_remove"
       	android:layout_toRightOf="@+id/graphs_close_graph"
       	android:layout_alignParentRight="true"
       	android:layout_below="@+id/graph_period_spinner"/>

</RelativeLayout>