<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/setup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/setup_title"
        android:textSize="12sp" 
        android:layout_alignParentTop="true"/>
    
	<TextView
        android:id="@+id/setup_action_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center" 
        android:text="@string/setup_action_list"
        android:textSize="18sp" 
        android:layout_below="@+id/setup_title"
        android:background="@android:color/darker_gray"/>
	
    <ListView 
        android:id="@+id/setup_listOfDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@+id/setup_action_hint">
    </ListView>
    
    <TextView
        android:id="@+id/setup_button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center" 
        android:layout_alignParentBottom="true"
        android:text="@string/setup_scan"
        android:background="@android:color/darker_gray"
        android:textSize="22sp" 
        android:clickable="true"
        android:onClick="scanForDevices"/>
    

</RelativeLayout>